Fix contrast ratio issue for total spent

--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -3,7 +3,7 @@
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 .card-section-title {
